// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
  id={null}
  rows={null}
>
  <input
    className="Slider__SliderPiece-sc-1hp9era-0 bVxLfS"
    disabled={false}
    id="default"
    max={20}
    min={1}
    onChange={[Function]}
    step={1}
    type="range"
    value={8}
  />
</section>
`;

exports[` 2`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-1 jozDvZ"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 kAjljR"
    id={null}
    rows={null}
  >
    <section
      className="Form__Section-v2wrel-0 XxWIM"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 iYDwFP Form__TitleSection-v2wrel-3 jMNcoX"
        fontSize="1.2rem"
        fontWeight="400"
        letterSpacing="1px"
      >
        Standard
      </h6>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 kAjljR"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
          id={null}
          rows={null}
        >
          <input
            className="Slider__SliderPiece-sc-1hp9era-0 bVxLfS"
            disabled={false}
            id={null}
            max={20}
            min={1}
            onChange={[Function]}
            step={1}
            type="range"
            value={1}
          />
        </section>
      </section>
    </section>
    <section
      className="Form__Section-v2wrel-0 XxWIM"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 iYDwFP Form__TitleSection-v2wrel-3 jMNcoX"
        fontSize="1.2rem"
        fontWeight="400"
        letterSpacing="1px"
      >
        Error
      </h6>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 kAjljR"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
          id={null}
          rows={null}
        >
          <input
            className="Slider__SliderPiece-sc-1hp9era-0 kjlJtp"
            disabled={false}
            id={null}
            max={20}
            min={1}
            onChange={[Function]}
            step={1}
            type="range"
            value={1}
          />
        </section>
      </section>
    </section>
    <section
      className="Form__Section-v2wrel-0 XxWIM"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 iYDwFP Form__TitleSection-v2wrel-3 jMNcoX"
        fontSize="1.2rem"
        fontWeight="400"
        letterSpacing="1px"
      >
        Disabled
      </h6>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 kAjljR"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
          id={null}
          rows={null}
        >
          <input
            className="Slider__SliderPiece-sc-1hp9era-0 bVxLfS"
            disabled={true}
            id={null}
            max={20}
            min={1}
            onChange={[Function]}
            step={1}
            type="range"
            value={1}
          />
        </section>
      </section>
    </section>
  </section>
</form>
`;

exports[` 3`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-1 jozDvZ"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 kAjljR"
    id={null}
    rows={null}
  >
    <section
      className="Form__Section-v2wrel-0 XxWIM"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 iYDwFP Form__TitleSection-v2wrel-3 jMNcoX"
        fontSize="1.2rem"
        fontWeight="400"
        letterSpacing="1px"
      >
        Standard
      </h6>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 kAjljR"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
          id={null}
          rows={null}
        >
          <input
            className="Slider__SliderPiece-sc-1hp9era-0 bVxLfS"
            disabled={false}
            id={null}
            max={20}
            min={1}
            onChange={[Function]}
            step={1}
            type="range"
            value={10}
          />
        </section>
      </section>
    </section>
    <section
      className="Form__Section-v2wrel-0 XxWIM"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 iYDwFP Form__TitleSection-v2wrel-3 jMNcoX"
        fontSize="1.2rem"
        fontWeight="400"
        letterSpacing="1px"
      >
        With Label
      </h6>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 kAjljR"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
          id={null}
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 fwqfhW Slider__SliderLabel-sc-1hp9era-1 bMyAub"
            fontSize="0.875rem"
            fontWeight={600}
            htmlFor={null}
            letterSpacing=".5px"
          >
            1
          </label>
          <input
            className="Slider__SliderPiece-sc-1hp9era-0 bVxLfS"
            disabled={false}
            id={null}
            max={20}
            min={1}
            onChange={[Function]}
            step={1}
            type="range"
            value={1}
          />
          <div
            className="Bar__BarLayout-icfo76-2 jGhkbe"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 fNcQEg"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 fwqfhW"
                fontSize="0.875rem"
                fontWeight={600}
                htmlFor={null}
                letterSpacing=".5px"
              >
                1
              </label>
            </div>
            <div
              className="Bar__Slot-icfo76-1 kZQbjh"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 fwqfhW"
                fontSize="0.875rem"
                fontWeight={600}
                htmlFor={null}
                letterSpacing=".5px"
              >
                20
              </label>
            </div>
          </div>
        </section>
      </section>
    </section>
    <section
      className="Form__Section-v2wrel-0 XxWIM"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 iYDwFP Form__TitleSection-v2wrel-3 jMNcoX"
        fontSize="1.2rem"
        fontWeight="400"
        letterSpacing="1px"
      >
        With Range
      </h6>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 kAjljR"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
          id={null}
          rows={null}
        >
          <input
            className="Slider__SliderPiece-sc-1hp9era-0 bVxLfS"
            disabled={false}
            id={null}
            max={20}
            min={1}
            onChange={[Function]}
            step={1}
            type="range"
            value={15}
          />
          <div
            className="Bar__BarLayout-icfo76-2 jGhkbe"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 fNcQEg"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 fwqfhW"
                fontSize="0.875rem"
                fontWeight={600}
                htmlFor={null}
                letterSpacing=".5px"
              >
                1
              </label>
            </div>
            <div
              className="Bar__Slot-icfo76-1 kZQbjh"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 fwqfhW"
                fontSize="0.875rem"
                fontWeight={600}
                htmlFor={null}
                letterSpacing=".5px"
              >
                20
              </label>
            </div>
          </div>
        </section>
      </section>
    </section>
  </section>
</form>
`;
